build-old/tmph64osx0i/ebpf_conntrack_extern.p4-stderr
*** make[4]: warning: jobserver unavailable: using -j1.  Add '+' to parent make rule.

*** Error 2: Failed to build the filter:
make[4]: warning: jobserver unavailable: using -j1.  Add '+' to parent make rule.
In file included from /media/yec/WORK/Programs/P4-verification/P4B-Translator/build/tmph64osx0i/test.h:5:0,
                 from /media/yec/WORK/Programs/P4-verification/P4B-Translator/testdata/extern_modules/extern-conntrack-ebpf.c:1,
                 from <command-line>:0:
/media/yec/WORK/Programs/P4-verification/P4B-Translator/backends/ebpf/runtime/ebpf_test.h:88:18: error: redefinition of ‘tables’
 struct bpf_table tables[] = {
                  ^
/media/yec/WORK/Programs/P4-verification/P4B-Translator/build/tmph64osx0i/test.c:23:1: note: in expansion of macro ‘REGISTER_START’
 REGISTER_START()
 ^
/media/yec/WORK/Programs/P4-verification/P4B-Translator/backends/ebpf/runtime/ebpf_test.h:88:18: note: previous definition of ‘tables’ was here
 struct bpf_table tables[] = {
                  ^
/media/yec/WORK/Programs/P4-verification/P4B-Translator/testdata/extern_modules/extern-conntrack-ebpf.c:31:1: note: in expansion of macro ‘REGISTER_START’
 REGISTER_START()
 ^
make[4]: *** [/media/yec/WORK/Programs/P4-verification/P4B-Translator/build/tmph64osx0i/build/test.o] Error 1

